--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "build": "rm -rf dist && mkdir dist && babel src --copy-files --out-dir dist",
     "start": "npm run build && node dist/index.js",
     "start:dev": "nodemon --exec babel-node ./src/index.js",
-    "------------------": "-------------------------"
+    "lint": "eslint './src/**/?(*).js' --fix",
+    "------------------": "-------------------------",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --watch",
+    "coverage": "cross-env DB_ENV=test jest --detectOpenHandles --verbose --coverage --forceExit",
+    "test:recordsController": "cross-env NODE_ENV=test && jest test/controllers/records.controller.spec.js --detectOpenHandles --verbose --watch"
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
@@ -46,7 +50,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^23.7.0",
     "faker": "^5.1.0",
-    "husky": "^4.3.7",
+    "husky": "^4.2.3",
     "jest": "^25.5.4",
     "jsdoc": "^3.6.4",
     "lint-staged": "^10.2.2",
@@ -56,6 +60,7 @@
   },
   "jest": {
     "collectCoverage": false,
+    "testEnvironment": "node",
     "modulePathIgnorePatterns": [
       "<rootDir>/dist/",
       "<rootDir>/build/"
@@ -75,7 +80,6 @@
   },
   "husky": {
     "hooks": {
-      "lint": "npm run lint",
       "pre-commit": "npm run coverage"
     }
   },
