--- a/.env.sample
+++ b/.env.sample
@@ -1,20 +1,8 @@
-DB_DIALECT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
-DB_HOST=
+NODE_ENV=
 
-TEST_DB_DIALECT=
-TEST_DB_USERNAME=
-TEST_DB_PASSWORD=
-TEST_DB_NAME=
-TEST_DB_HOST=
+PORT=
 
-PRODUCTION_DB_USERNAME=
-PRODUCTION_DB_PASSWORD=
-PRODUCTION_DB_NAME=
-PRODUCTION_DB_HOST=
-PRODUCTION_DB_DIALECT=
-
-BCRYPT_SALT=
-JWT_SECRET=
+DATABASE_URL_DEV=
+DATABASE_URL_TEST=
+DATABASE_URL_STAGING=
+DATABASE_URL_PROD=
