--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "start": "npm run build && node dist/index.js",
     "start:dev": "nodemon --exec babel-node ./src/index.js",
     "lint": "eslint './src/**/?(*).js' --fix",
-    "------------------": "-------------------------",
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles",
-    "coverage": "cross-env DB_ENV=test jest --detectOpenHandles --verbose --coverage --forceExit",
-    "test:recordsController": "cross-env NODE_ENV=test && jest test/controllers/records.controller.spec.js --detectOpenHandles --verbose --watch"
+    "coverage": "cross-env DB_ENV=test jest --detectOpenHandles --verbose --coverage --forceExit"
   },
   "dependencies": {
     "@babel/cli": "^7.8.4",
@@ -23,16 +21,12 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/plugin-transform-runtime": "^7.10.4",
-    "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.10.4",
     "@babel/register": "^7.8.3",
     "@babel/runtime": "^7.9.6",
     "@hapi/joi": "^17.1.1",
     "@hapi/joi-date": "^2.0.1",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-module-resolver": "^4.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
